<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ControllerActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/button_prev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/av_previous" 
            android:contentDescription="@string/prev" />

        <ImageButton
            android:id="@+id/button_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/av_stop" 
            android:contentDescription="@string/stop" />

        <ImageButton
            android:id="@+id/button_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/av_play" 
            android:contentDescription="@string/play" />

        <ImageButton
            android:id="@+id/button_pause"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/av_pause" 
            android:contentDescription="@string/pause" />

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/av_next" 
            android:contentDescription="@string/next" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/button_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/av_down" 
            android:contentDescription="@string/down" />

        <ImageButton
            android:id="@+id/button_mute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/av_mute" 
            android:contentDescription="@string/mute" />

        <ImageButton
            android:id="@+id/button_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/av_up" 
            android:contentDescription="@string/up" />
    
    </LinearLayout>

    <Switch
        android:id="@+id/switch_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_server" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/host"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/form_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/host_hint"
        android:inputType="text" >

        <requestFocus />
    </EditText>

</LinearLayout>